--- a/assets/scss/_themes-vars.module.scss
+++ b/assets/scss/_themes-vars.module.scss
@@ -2,18 +2,32 @@
 $paper: #ffffff;
 
 // primary
-$primaryLight: #e3f2fd;
-$primaryMain: #2196f3;
-$primaryDark: #1e88e5;
-$primary200: #90caf9;
-$primary800: #1565c0;
+$primaryLight: #CBEFF6;
+$primaryMain: #15616D;
+$primaryDark: #104C56;
+$primary200: #24A8BC;
+$primary800: #104C56;
 
 // secondary
-$secondaryLight: #ede7f6;
-$secondaryMain: #673ab7;
-$secondaryDark: #5e35b1;
-$secondary200: #b39ddb;
-$secondary800: #4527a0;
+$secondaryLight: #FFDFC2;
+$secondaryMain: #FF7D00;
+$secondaryDark: #A34F00;
+$secondary200: #FF8B1F;
+$secondary800: #7A3B00;
+
+// // primary
+// $primaryLight: #e3f2fd;
+// $primaryMain: #2196f3;
+// $primaryDark: #1e88e5;
+// $primary200: #90caf9;
+// $primary800: #1565c0;
+
+// // secondary
+// $secondaryLight: #ede7f6;
+// $secondaryMain: #673ab7;
+// $secondaryDark: #5e35b1;
+// $secondary200: #b39ddb;
+// $secondary800: #4527a0;
 
 // success Colors
 $successLight: #b9f6ca;
